--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./styles/style.css">
   <title>Надо сделать идеально</title>
 </head>
-<body>
+<body class="body">
   <h1 class="title">Надо сделать идеально</h1>
   <video class="video" src="./video/cover-video.mp4" autoplay loop muted poster="./images/poster.jpg"></video>
 </body>
