--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Страница о взгляде на перфекционизм в работе и учёбе.">
+  <meta property="og:description" content="Страница о взгляде на перфекционизм в работе и учёбе.">
   <meta property="og:title" content="Надо сделать идеально">
+  <meta property="og:url" content="https://voldemarvova.github.io/Nado-sdelat-idealno/">
+  <meta property="og:image" content="./images/og.jpg">
+  <meta property="twitter:card" content="summary_large_image">
   <link rel="icon" href="./images/icon.ico" sizes="any">
   <link rel="icon" href="./images/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
